use pixel height for queue decoration (avoid subpixel gap)

--- a/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
+++ b/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
@@ -297,7 +297,7 @@ pre {
    right: 3px;
    content: '';
    display: block;
-   height: 100%;
+   height: 17px;
    width: 7px;
    z-index: -100;
 }
